Refactor: Rename SourceDatabase to JHDB and DestinationDatabase to MiddleDatabase; Remove documentation from git tracking

--- a/App.config
+++ b/App.config
@@ -7,10 +7,7 @@
     <!-- 資料庫連線字串 -->
     <connectionStrings>
         <!-- RepairRecordsTransfer 用 -->
-        <add name="SourceDatabase" 
-             connectionString="Data Source=192.168.4.93:1521/AMES;User Id=JHAMES;Password=AMES666;" 
-             providerName="Oracle.ManagedDataAccess.Client" />
-        <add name="DestinationDatabase" 
+        <add name="MiddleDatabase" 
              connectionString="Server=192.168.5.25;Database=i_Factory_SOP_DB;User Id=SuperSOP;Password=A12345678;MultipleActiveResultSets=True;" 
              providerName="System.Data.SqlClient" />
         
