feat: 新增 SMT_Stencil_Overdue 鋼板逾期通知排程
- 新增 Models: StencilOverdueRecord.cs, MailRecipient.cs
- 新增 Services: StencilOverdueService.cs (查詢/Email/旗標更新)
- 新增 Jobs: StencilOverdueJob.cs
- 更新 JobFactory.cs 註冊新排程
- 更新 App.config 新增排程配置與 SMTP 設定
- 更新 .csproj 加入新檔案
- 工程編號超過20碼截斷顯示
- Email 格式: Hi~All 開頭, 新增上線日期欄位

--- a/App.config
+++ b/App.config
@@ -33,5 +33,17 @@
         <add key="ActualTime_Schema_JHDB_SYS" value="JHSYS" />
         <add key="ActualTime_CalcDate" value="" />
         <add key="ActualTime_TxtOutputPath" value="Output" />
+        
+        <!-- SMT_Stencil_Overdue 設定 -->
+        <add key="StencilOverdue_DaysOnlineThreshold" value="7" />
+        <add key="StencilOverdue_UsageRateThreshold" value="0.95" />
+        <add key="StencilOverdue_MailGroupNo" value="STEEL_ALARM" />
+        <add key="StencilOverdue_TestMode" value="true" />
+        <add key="StencilOverdue_TestRecipient" value="daloz.e@eversun.com.tw" />
+        
+        <!-- Email SMTP 設定 -->
+        <add key="Mail_SmtpServer" value="mail.eversun.com.tw" />
+        <add key="Mail_SmtpPort" value="25" />
+        <add key="Mail_SenderEmail" value="ames@eversun.com.tw" />
     </appSettings>
 </configuration>
